Image extraction with tests

--- a/test_data/python-goose/images/test_known_image_css_id/test_known_image_css_id.html
+++ b/test_data/python-goose/images/test_known_image_css_id/test_known_image_css_id.html
@@ -6,10 +6,10 @@
 
     <body>
         <div>
-            <img id="storytext" src="http://bla.com/images/465395/"/>
+            <img id="storytext" src="http://md0.libe.com/api/libe/v2/paperpage/185739/?format=jpg&amp;size=x148"/>
         </div>
         <div>
-            <img id="mediaimage" src="http://go.com/images/465395/"/>
+            <img id="mediaimage" src="http://md0.libe.com/photo/465395/?modified_at=1351411813&amp;ratio_x=03&amp;ratio_y=02&amp;width=476"/>
         </div>
         <div>
             <h1>title</h1>
