Finish image test cases

--- a/test_data/python-goose/images/test_opengraph_tag/test_opengraph_tag.html
+++ b/test_data/python-goose/images/test_opengraph_tag/test_opengraph_tag.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>test</title>
-        <meta property="og:image" content="http://go.com/images/465395/" />
+        <meta property="og:image" content="http://md0.libe.com/photo/465395/?modified_at=1351411813&amp;ratio_x=03&amp;ratio_y=02&amp;width=476" />
     </head>
 
     <body>
