--- a/test_data/python-goose/images/test_known_image_name_parent/test_known_image_name_parent.html
+++ b/test_data/python-goose/images/test_known_image_name_parent/test_known_image_name_parent.html
@@ -6,7 +6,7 @@
 
     <body>
         <div class="big_photo">
-            <img src="http://go.com/images/465395/"/>
+            <img src="http://md0.libe.com/photo/465395/?modified_at=1351411813&amp;ratio_x=03&amp;ratio_y=02&amp;width=476"/>
         </div>
         <div>
             <h1>title</h1>
